add breadcrumbs to browser

--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,7 @@
         <section class="panel panel--detail">
           <div class="panel__detail-header">
             <div>
+              <div class="breadcrumbs" id="breadcrumbs"></div>
               <h2 id="detail-title">Select an item</h2>
               <p id="detail-subtitle">Pick a file from the list to preview.</p>
             </div>
