feat: enforce mereological consistency and typed classification
- Added 'type' field to schema (syntactic, semantic, morphological)
- Classified all construction files with the new type
- Resolved 90+ mereological issues (broken links, missing relations)
- Updated 'proper-name' vs 'n-proper' distinction based on literature
- Added MEREOLOGY_NOTE.md capturing reciprocal learning
- Updated web interface to display construction types

--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,7 @@
               <p id="detail-subtitle">Pick a file from the list to preview.</p>
             </div>
             <div class="detail__actions">
+              <button class="button button--ghost" id="back-button" disabled>Back</button>
               <button class="button" id="toggle-view" disabled>Show raw</button>
               <a class="button button--ghost" id="open-link" href="#" target="_blank" rel="noreferrer" aria-disabled="true">Open file</a>
             </div>
